# allabolag-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test-cache-throttle.js  test-debug.js  test-extract-financials.js  test-fetch.js  test-links.mjs  test-lovable.js  test-new-structure.js  test-raion-details.js  test-raion-direct.js  test-raion-financials.js  test-structure.js
ref/: scrapers.ts.ref  utils.ts.ref
ref/legacy-tests/: berakna-cagr-raion.js  test-benify-direct.js  test-benify-exact.js  test-benify.js  test-content.mjs  test-debug-financials.js  test-debug-table.js  test-direct.js  test-events.mjs  test-get-orgnumber.js  test-raion-address.js  test-raion.js  test-spotify.js  test.js
src/allabolag_mcp/: scrapers.py  server.py
