[project]
name = "allabolag-mcp"
version = "0.3.0"
description = "MCP-server som hämtar bolagsinformation från allabolag.se via scrapling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Anders Bratland", email = "anders@dailywins.se" }]
keywords = ["mcp", "allabolag", "scrapling", "sweden", "company-data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "scrapling[fetchers]>=0.4.8",
]

[project.scripts]
allabolag-mcp = "allabolag_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Daily-Wins/allabolag-mcp-server"
Issues = "https://github.com/Daily-Wins/allabolag-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allabolag_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
